酒的profile页面右边酒标展示默认图片错误。

--- a/app/views/themes/waterfall/wine_details/share/_spec.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_spec.html.erb
@@ -1,6 +1,6 @@
 <div class="wine_id_pic">
   <%= link_to wine_path(@wine_detail) do %>
-	<%= wine_label_tag @wine_detail, :width => 100, :height => 100 %>
+	<%= wine_label_tag @wine_detail, :thumb_name => :thumb, :width => 100, :height => 100 %>
 	<% end %>
 </div>
 <div class="info">
