template update: search friend

--- a/public/template/friends.html
+++ b/public/template/friends.html
@@ -41,6 +41,11 @@
     	<div class="whitespace friends">
             <h1 class="main_title">添加好友</h1>
           <div class="gray_box">
+            	<h3>搜寻站内好友</h3>
+                <p><input name="" type="text" class="text" style="width:200px;" placeholder="请输入好友昵称，如：小白" />
+                <a href="friends_search_list.html" class="btn_gray ml10"><span>搜寻好友</span></a></p>
+          </div>
+          <div class="gray_box">
             	<h3>通过社交平台来寻找好友</h3>
                 <p class="snsSearch">
                 	<a href="friends_sns_bound.html"><img src="images/common/icon_sina_on.png" width="44" height="44" align="absmiddle" /></a>
