--- a/app/views/themes/waterfall/friends/find.html.erb
+++ b/app/views/themes/waterfall/friends/find.html.erb
@@ -4,6 +4,7 @@
 <% end %>
   <div class="whitespace friends">
     <h1 class="main_title">添加好友</h1>
+    <%= render :partial => "friends/search" %>
     <%= render :partial => "friends/all_sns" %>
 
     <div class="gray_box invite">
