--- a/public/template/user_profile.html
+++ b/public/template/user_profile.html
@@ -78,6 +78,14 @@
                    		<label class="vm">博客地址</label>
                        <input name="text" type="text" class="text name mr5" value="http://luoqihome.blogbus.com" />
                    </div>
+                    <div class="optional">
+                   		<label>个性域名</label>
+                       http://iwine.com/sheren <span class=" icon_fol">您已经设置了个性域名</span>
+                   </div>
+                   <div class="optional">
+                   		<label class="vm">个性域名</label>
+                       您还没有设置个性域名 <a href="user_url_setting.html" class="btn_gray"><span>现在设置</span></a>
+                   </div>
                    <div class="optional">
                    		<label>介绍</label>
                        <textarea name="" cols="" rows=""></textarea>
