--- a/app/views/user_mailer/invoting_friends.html.erb
+++ b/app/views/user_mailer/invoting_friends.html.erb
@@ -1,8 +1,4 @@
-<p><%= @email %>, 您好</p>
-<p>
-  你的好友<%= @user.username %>邀请您加入<a href="http://www.iwine.com">iWine.com.</a>
+<p>hi, 我是 <%= @user.username %></p>
+<p><%= @body %></p>
+<p>点击这里加入<a href="http://www.iwine.com">iWine(爱红酒)</a></p>
 
-</p>
-<p><% @body %></p>
-
-<p>爱红酒</p>
