--- a/app/views/themes/waterfall/cellar_items/_form.html.erb
+++ b/app/views/themes/waterfall/cellar_items/_form.html.erb
@@ -34,7 +34,7 @@
     </div>
     <div class="optional">
       <label>购入时间</label>
-      <%= f.date_select :buy_date, :discard_day => true, :discard_month => true, :start_year =>  1990, :end_year => Time.now.year  %>
+      <%= f.date_select :buy_date, :start_year =>  1990, :end_year => Time.now.year  %>
     </div>
     <div class="optional">
       <label>适饮年限</label>
