--- a/public/template/cellar_people.html
+++ b/public/template/cellar_people.html
@@ -92,8 +92,9 @@
                 <th class="img">酒标</th>
                 <th class="year">年份</th>
                 <th class="des">名称&描述</th>
-                <th class="info">相关信息</th>
+                <th class="price">容量</th>
                 <th class="count">数量</th>
+                <th class="price">购买时间</th>
                 <th class="price">购入价格</th>
                 <th class="place">所在地</th>
               </tr>
@@ -102,11 +103,9 @@
                 <td class="year">2005</td>
                 <td class="des">拉菲珍宝<br />
                   Carruades de lafittle<br /></td>
-                <td class="info">容量:750ml<br />
-                  购买时间: 2005年<br />
-                  酒商: 某某酒商<br />
-                适饮年限: 2002-2014年</td>
+                <td class="price">750ml</td>
                 <td class="count">3</td>
+                <td class="price">2005年</td>
                 <td class="price">￥175.00/支</td>
                 <td class="place">上海</td>
               </tr>
@@ -115,11 +114,9 @@
                 <td class="year">2005</td>
                 <td class="des">拉菲珍宝<br />
                   Carruades de lafittle<br /></td>
-                <td class="info">容量:750ml<br />
-                  购买时间: 2005年<br />
-                  酒商: 某某酒商<br />
-                适饮年限: 2002-2014年</td>
+                <td class="price">750ml</td>
                 <td class="count">3</td>
+                <td class="price">2005年</td>
                 <td class="price">￥175.00/支</td>
                 <td class="place">上海</td>
               </tr>
@@ -128,11 +125,9 @@
                 <td class="year">2005</td>
                 <td class="des">拉菲珍宝<br />
                   Carruades de lafittle<br /></td>
-                <td class="info">容量:750ml<br />
-                  购买时间: 2005年<br />
-                  酒商: 某某酒商<br />
-                适饮年限: 2002-2014年</td>
+                <td class="price">750ml</td>
                 <td class="count">3</td>
+                <td class="price">2005年</td>
                 <td class="price">￥175.00/支</td>
                 <td class="place">上海</td>
               </tr>
@@ -141,11 +136,9 @@
                 <td class="year">2005</td>
                 <td class="des">拉菲珍宝<br />
                   Carruades de lafittle<br /></td>
-                <td class="info">容量:750ml<br />
-                  购买时间: 2005年<br />
-                  酒商: 某某酒商<br />
-                适饮年限: 2002-2014年</td>
+                <td class="price">750ml</td>
                 <td class="count">3</td>
+                <td class="price">2005年</td>
                 <td class="price">￥175.00/支</td>
                 <td class="place">上海</td>
               </tr>
@@ -154,16 +147,14 @@
                 <td class="year">2005</td>
                 <td class="des">拉菲珍宝<br />
                   Carruades de lafittle<br /></td>
-                <td class="info">容量:750ml<br />
-                  购买时间: 2005年<br />
-                  酒商: 某某酒商<br />
-                适饮年限: 2002-2014年</td>
+                <td class="price">750ml</td>
                 <td class="count">3</td>
+                <td class="price">2005年</td>
                 <td class="price">￥175.00/支</td>
                 <td class="place">上海</td>
               </tr>
             </table>
-        </div>
+  </div>
           <div class="pagination">
               <span class="disabled"> < </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> > </a><br />
           </div>
