#356； 修改评论照片的路由bug

--- a/app/views/themes/waterfall/wine_details/short_comments.html.erb
+++ b/app/views/themes/waterfall/wine_details/short_comments.html.erb
@@ -86,7 +86,7 @@ function initStarBar(starBar){
   var resultElement = starBar.children('input');
   var value = resultElement.val()/2;
   var desEl = starBar.children('span');
-  var descriptions = ["欠佳", "尚可", "良好", "推荐", "力荐"];
+  var descriptions = [" ", "欠佳", "尚可", "良好", "推荐", "力荐"];
   var url = false;
 
   <% if @user_comment.present? %>
