--- a/public/template/index.html
+++ b/public/template/index.html
@@ -39,6 +39,18 @@
             	<a href="wine.html">酒款</a>
             	<ul class="CategoryDropdown">
                 	<li>
+                        <p class="title">热门葡萄品种</p>
+                        <div class="item">
+                            <span><a href="#">赤霞珠</a></span>
+                            <span><a href="#">西拉</a></span>
+                            <span><a href="#">梅洛</a></span>
+                            <span><a href="#">黑皮诺</a></span>
+                            <span><a href="#">霞多丽</a></span>
+                            <span><a href="#">长相思</a></span>
+                            <span><a href="#">雷司令</a></span>
+                        </div>
+                    </li>
+                    <li>
                         <p class="title">类型</p>
                         <div class="item">
                             <span><a href="#">红葡萄酒</a></span>
@@ -54,7 +66,6 @@
                             <span><a href="#">意大利</a></span>
                             <span><a href="#">西班牙</a></span>
                             <span><a href="#">德国</a></span>
-                            <span><a href="#">奥地利</a></span>
                             <span><a href="#">澳洲</a></span>
                             <span><a href="#">新西兰</a></span>
                             <span><a href="#">智利</a></span>
