发送私信的autocomplete去掉自己； 用户设置暂不验证“所在地”

--- a/app/views/themes/waterfall/settings/basic.html.erb
+++ b/app/views/themes/waterfall/settings/basic.html.erb
@@ -37,8 +37,8 @@
                           :prompt => {:year => '请选择年', :month => '请选择月', :day => '请选择日'} %>
       </div>
         <% end %>
-      <div class="required">
-        <label class="vm"><span>*</span>所在地</label>
+      <div class="optional">
+        <label class="vm">所在地</label>
         <div class="content">
           <%= f.text_field :city, :class => "text" %>
         </div>
