my home page update

--- a/public/template/myhp.html
+++ b/public/template/myhp.html
@@ -70,25 +70,71 @@
                   <h1>藏酒 <span class="font12 more"><a href="cellar.html">(共10支...)</a></span></h1>
                 </div>
                 <div class="puzzle clearfix">
-           	    	<span><a href="wine_profile.html"><img src="images/test/hp_wine201.jpg" width="201" height="201" /></a></span>
-                    <span><a href="wine_profile.html"><img src="images/test/hp_wine201_2.jpg" width="201" height="201" /></a></span>
-                    <span><a href="wine_profile.html"><img src="images/test/wine100_02.jpg" width="100" height="100" /></a></span>
-                    <span><a href="wine_profile.html"><img src="images/test/wine100_05.jpg" width="100" height="100" /></a></span>
-                    <span><a href="wine_profile.html"><img src="images/test/wine100_06.jpg" width="100" height="100" /></a></span>
-                    <span><a href="wine_profile.html"><img src="images/test/wine100_03.jpg" width="100" height="100" /></a></span>
+                	<dl>
+                    	<span class="non_public"><img src="images/icon/non_public.png" width="16" height="16" alt="仅自己可见"   title="仅自己可见"/></span>
+                        <dt><a href="wine_profile.html"><img src="images/test/wine100_02.jpg" width="100" height="100" /></a></dt>
+                        <dd>
+                            <h1 class="zh"><a href="wine_profile.html">2009 贺兰山美域赤霞珠干红葡萄酒(特选系列)</a></h1>
+                            <h1 class="en"><a href="wine_profile.html">2009 Domaine Helan Mountain Premium Collection Cab</a></h1>
+                        </dd>
+                    </dl>
+                 <dl class="last">
+           	     <dt><a href="wine_profile.html"><img src="images/test/wine100_05.jpg" width="100" height="100" /></a></dt>
+                        <dd>
+                            <h1 class="zh"><a href="wine_profile.html">2009 贺兰山美域赤霞珠干红葡萄酒(特选系列)</a></h1>
+                            <h1 class="en"><a href="wine_profile.html">2009 Domaine Helan Mountain Premium Collection Cab</a></h1>
+                        </dd>
+                    </dl>
+                    <dl>
+                    	<dt><a href="wine_profile.html"><img src="images/test/wine100_07.jpg" width="34" height="100" /></a></dt>
+                        <dd>
+                            <h1 class="zh"><a href="wine_profile.html">2009 贺兰山美域赤霞珠干红葡萄酒(特选系列)</a></h1>
+                            <h1 class="en"><a href="wine_profile.html">2009 Domaine Helan Mountain Premium Collection Cab</a></h1>
+                        </dd>
+                  </dl>
+                <dl class="last">
+               	  <span class="non_public"><img src="images/icon/non_public.png" width="16" height="16" alt="仅自己可见"   title="仅自己可见"/></span>
+                  <dt><a href="wine_profile.html"><img src="images/test/wine100_08.jpg" width="31" height="99" /></a></dt>
+                        <dd>
+                            <h1 class="zh"><a href="wine_profile.html">2009 贺兰山美域赤霞珠干红葡萄酒(特选系列)</a></h1>
+                            <h1 class="en"><a href="wine_profile.html">2009 Domaine Helan Mountain Premium Collection Cab</a></h1>
+                        </dd>
+                    </dl>
                   <div class="clear"></div>
                 </div>
                 <div class="title_btn">
                   <h1>关注的酒 <span class="font12 more"><a href="myhp_wine_list.html">(共10支...)</a></span></h1>
                 </div>
                 <div class="puzzle clearfix">
-           	    	<span><a href="wine_profile.html"><img src="images/test/hp_wine201.jpg" width="201" height="201" /></a></span>
-                    <span><a href="wine_profile.html"><img src="images/test/hp_wine201_2.jpg" width="201" height="201" /></a></span>
-                    <span><a href="wine_profile.html"><img src="images/test/wine100_02.jpg" width="100" height="100" /></a></span>
-                    <span><a href="wine_profile.html"><img src="images/test/wine100_05.jpg" width="100" height="100" /></a></span>
-                    <span><a href="wine_profile.html"><img src="images/test/wine100_06.jpg" width="100" height="100" /></a></span>
-                    <span><a href="wine_profile.html"><img src="images/test/wine100_03.jpg" width="100" height="100" /></a></span>
-                    <div class="clear"></div>
+                    <dl>
+                    	<dt><a href="wine_profile.html"><img src="images/test/wine100_02.jpg" width="100" height="100" /></a></dt>
+                        <dd>
+                            <h1 class="zh"><a href="wine_profile.html">2009 贺兰山美域赤霞珠干红葡萄酒(特选系列)</a></h1>
+                            <h1 class="en"><a href="wine_profile.html">2009 Domaine Helan Mountain Premium Collection Cab</a></h1>
+                        </dd>
+                    </dl>
+                 <dl class="last">
+               	   <dt><a href="wine_profile.html"><img src="images/test/wine100_05.jpg" width="100" height="100" /></a></dt>
+                        <dd>
+                            <h1 class="zh"><a href="wine_profile.html">2009 贺兰山美域赤霞珠干红葡萄酒(特选系列)</a></h1>
+                            <h1 class="en"><a href="wine_profile.html">2009 Domaine Helan Mountain Premium Collection Cab</a></h1>
+                        </dd>
+                  </dl>
+                    <dl>
+                   	  <dt><a href="wine_profile.html"><img src="images/test/wine100_07.jpg" width="34" height="100" /></a></dt>
+                        <dd>
+                            <h1 class="zh"><a href="wine_profile.html">2009 贺兰山美域赤霞珠干红葡萄酒(特选系列)</a></h1>
+                            <h1 class="en"><a href="wine_profile.html">2009 Domaine Helan Mountain Premium Collection Cab</a></h1>
+                        </dd>
+                  </dl>
+<dl class="last">
+    <dt><a href="wine_profile.html"><img src="images/test/wine100_08.jpg" width="31" height="99" /></a></dt>
+                        <dd>
+                            <h1 class="zh"><a href="wine_profile.html">2009 贺兰山美域赤霞珠干红葡萄酒(特选系列)</a></h1>
+                            <h1 class="en"><a href="wine_profile.html">2009 Domaine Helan Mountain Premium Collection Cab</a></h1>
+                        </dd>
+                    </dl>
+                  <div class="clear"></div>
                 </div>
                 <div class="title_btn">
                   <h1>评论 <span class="font12 more"><a href="myhp_comment_list.html">(共10条...)</a></span></h1>
