--- a/app/views/themes/waterfall/users/share/_favorite_wines.html.erb
+++ b/app/views/themes/waterfall/users/share/_favorite_wines.html.erb
@@ -1,22 +1,24 @@
-<% if !@cellar_items.blank? %>
-<% @cellar_items.each_with_index do |item, index| %>
-<span>
-  <%= link_to wine_path(item.wine_detail) do %>
-  <% if index > 1 %>
-  <%= wine_label_tag(item.wine_detail,
-      :thumb_name => :thumb_x,
-      :width => 100,
-      :height => 100) %>
-  <% else %>
-  <%= wine_label_tag(item.wine_detail,
-      :thumb_name => :middle,
-      :width => 201, 
-      :height => 201) %>
-  <% end %>
-  <% end %>
-</span>
-<% end %>
-<div class="clear"></div>
+<% if @cellar_items.present? %>
+  <% @cellar_items.each_with_index do |item, index| %>
+    <% wine_detail = item.wine_detail %>
+    <dl <%= "class='last'" if index.odd? %>>
+      <%= raw item_non_public(item.private_type) %>
+      <dt>
+        <%= link_to wine_path(wine_detail) do %>
+          <%= wine_label_tag(wine_detail, 
+            :thumb_name => :thumb_x, 
+            :title => wine_detail.name,
+            :alt => wine_detail.name,
+            :width => 100, :height => 100)%>
+        <% end %>
+      </dt>
+      <dd>
+        <h1 class="zh"><%= link_to wine_detail.cname, wine_path(wine_detail) %></h1>
+        <h1 class="en"><%= link_to wine_detail.origin_name, wine_path(wine_detail) %></h1>
+      </dd>
+    </dl>
+  <% end %> 
+  <div class="clear"></div>
 <% else %>
-<p>暂时没有藏酒！</p>
+  <p>暂时没有藏酒！</p>
 <% end %>
