--- a/app/views/themes/waterfall/users/share/_following_wines.html.erb
+++ b/app/views/themes/waterfall/users/share/_following_wines.html.erb
@@ -1,22 +1,21 @@
-<% if !@following_wines.blank? %>
-<% @following_wines.collect{|i| i.followable }.each_with_index do |wine, index| %>
-<span>
-  <%= link_to wine_path(wine) do %>
-  <% if index > 1 %>
-  <%= wine_label_tag(wine,
-      :thumb_name => :thumb_x,
-      :width => 100,
-      :height => 100) %>
-  <% else %>
-  <%= wine_label_tag(wine,
-      :thumb_name => :middle,
-      :width => 201, 
-      :height => 201) %>
+<% if @following_wines.present? %>
+  <% @following_wines.collect{|i| i.followable }.each_with_index do |wine_detail, index| %>
+    <dl <%= "class='last'" if index.odd? %>>
+      <dt>
+        <%= link_to wine_path(wine_detail) do %>
+          <%= wine_label_tag(wine_detail,
+              :thumb_name => :thumb_x,
+              :width => 100,
+              :height => 100) %>
+        <% end %>
+      </dt>
+      <dd>
+        <h1 class="zh"><%= link_to wine_detail.cname, wine_path(wine_detail) %></h1>
+        <h1 class="en"><%= link_to wine_detail.origin_name, wine_path(wine_detail) %></h1>
+      </dd>
+    </dl>
   <% end %>
-  <% end %>
-</span>
-<% end %>
-<div class="clear"></div>
+  <div class="clear"></div>
 <% else %>
-<p>暂时没有关注的酒！</p>
+  <p>暂时没有关注的酒！</p>
 <% end %>
